[gd_scene load_steps=2 format=3 uid="uid://b2xkqvm5f4d8w"]

[ext_resource type="Script" path="res://scripts/UI.gd" id="1_vxn4m"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_vxn4m")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 200.0
offset_bottom = 150.0

[node name="PopulationLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "人口: 0"

[node name="HouseCountLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "家: 0"

[node name="TimeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "00:00"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="TimeScaleContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TimeScaleLabel" type="Label" parent="VBoxContainer/TimeScaleContainer"]
layout_mode = 2
text = "速度: x1"

[node name="TimeScaleSlider" type="HSlider" parent="VBoxContainer/TimeScaleContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 100.0
value = 1.0